# ocaml-magic

./: CHANGES.old  README.md  dune-project  magic.opam
examples/: file.ml  test.ml
src/: dune  magic.ml  magic.mli  magic_stubs.c
src/config/: discover.ml
