(library
 (name magic)
 (public_name magic)
 (synopsis "Ocaml bindings to libmagic")
 (foreign_stubs
  (language c)
  (names magic_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
